src/style/app.scss
/* ... */
.ant-collapse > .ant-collapse-item > .ant-collapse-header {
    padding: 5px 10px;
    font-weight: 600;
}

.ant-collapse-borderless > .ant-collapse-item > .ant-collapse-content > .ant-collapse-content-box {
    padding: 0 10px 5px 10px;
}

.ant-collapse-icon-position-right > .ant-collapse-item > .ant-collapse-header .ant-collapse-arrow {
    font-size: 16px;
    right: 13px;
}

////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
// Helper classes

.full-height {
    height: 100%;
}

.scrollable {
    height: 100%;
    padding: 0 10px;
    overflow-x: hidden;
    overflow-y: auto;
    -webkit-overflow-scrolling: touch;

    &.both-ways {
        overflow: auto;
    }
}

.left {
    float: left;
}

.right {
    float: right;
}

.fixed-top {
    position: sticky;
    z-index: 5;
    top: 0;
    background-color: $background;
}

.app-name {
    text-transform: uppercase;
    color: black;
    font-weight: 600;
    letter-spacing: 2px;
}

.heading {
    padding: 5px 0;
    border-bottom: 1px solid $control-border;
    margin-bottom: 10px;
    padding: 5px 10px;
    font-size: 20px;
    font-weight: 600;
}

.subheading {
    font-weight: 600;
    font-size: 15px;
    padding-top: 3px;
    color: #656565;
}

.divider {
    margin: 10px 20px;
    height: 0;
    border-top: 1px solid $control-border;
}

.sidebar {
    background-color: $control;

    &.left {
        border-right: 1px solid $control-border;
    }

    &.right {
        border-left: 1px solid $control-border;
    }
}

.lowercase {
    text-transform: lowercase;
}

.disabled {
    pointer-events: none;
    opacity: 0.5;
}

.strikethrough {
    text-decoration: line-through;
    opacity: 0.8;
}

.image.rotate {
    transform: rotate(-180deg);
}

.table {
    background-color: $background;
    border: 1px solid $control-border;
    margin: 8px 0;
    padding: 3px 0;

    .cell {
        display: inline-block;
        padding: 2px 0;
        text-align: center;

        &.three {
            width: calc((100% - 1px) / 3);
        }

        &.four {
            width: calc((100% - 1px) / 4);
        }

        &.easy {
            padding-bottom: 4px;
            border-bottom: 3px solid green;
        }
    
        &.medium {
            padding-bottom: 4px;
            border-bottom: 3px solid orange;
        }
    
        &.hard {
            padding-bottom: 4px;
            border-bottom: 3px solid red;
        }
    
        &.deadly {
            padding-bottom: 4px;
            border-bottom: 3px solid black;
        }
    }
}

////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
// Core app classes

* {
    box-sizing: border-box;
    transition: all 0.2s ease-in-out;
    -webkit-user-select: none;
    user-select: none;
    font-family: 'Open Sans', sans-serif;
}

html,
body,
#root,
.dojo {
    margin: 0;
    padding: 0;
    height: 100%;
    width: 100%;
    position: fixed;
    overflow: hidden;
}

.dojo {
    font-size: 12px;
    background-color: $background;
    color: $foreground;
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;

    &.popout {
        
        .map-panel {
            overflow: visible;
        }
    }
}

.page-content {
    height: calc(100% - 100px);
}

.render-error {
    background-color: orange;
    color: white;
    font-weight: 600;
    text-align: center;
    content: 'error';
}

.grid-panel {
    > .heading {
        font-size: 20px;

        > .title {
            width: calc(100% - 20px);
            display: inline-block;
        }
    
        .image {
            width: 20px;
            height: 20px;
            cursor: pointer;
            display: inline-block;
            margin-bottom: 3px;
        }
    }

    .grid {
        &.columns-1 > * {
            display: inline-block;
            vertical-align: top;
            width: 100%;
        }

        &.columns-2 > * {
            display: inline-block;
            vertical-align: top;
            width: calc(100% / 2);
        }

        &.columns-3 > * {
            display: inline-block;
            vertical-align: top;
            width: calc(100% / 3);
        }
    }
}

////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
// Page Header / Page Footer

.page-header {
    height: 50px;
    padding: 10px 5px;
    background-color: $header-background;
    border-bottom: 1px solid $control-border;

    .menu-icon {
        display: inline-block;
        vertical-align: top;
        padding: 5px;
        margin: 0 5px;
        font-size: 20px;
        cursor: pointer;

        &:hover {
            background-color: $highlight02;
        }
    }

    .app-title {
        display: inline-block;
        vertical-align: top;
        padding: 5px;
        height: 30px;
        line-height: 20px;
        font-size: 20px;
        font-weight: 600;
        color: $header-foreground;
        border-left: 3px solid $header-foreground;
    }

    .drawer-icons {
        position: absolute;
        right: 5px;
        top: 0;
        height: 50px;
    }

    .title-bar-icon {
        padding: 5px;
        margin: 10px 5px;
        font-size: 20px;
        border-radius: 50%;
        cursor: pointer;

        &:hover {
            background-color: $highlight02;
        }
    }
}
/* ... */

